--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,15 +11,21 @@
     --foreground: #ededed;
   }
 }
+html,
+/* body {
+  max-width: 100vw;
+  overflow-x: hidden;
+} */
+html {
+  font-size: 75%;
+}
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  /* font-family: "Mulish", "Arial", sans-serif !important; */
-  font-family: 'Switzer', sans-serif !important;
+  font-family: "Switzer", sans-serif !important;
 }
 body {
-  font-family: 'Switzer', sans-serif !important;
-  
+  font-family: "Switzer", sans-serif !important;
 }
